Page2 size fix and alignment set

--- a/styles.css
+++ b/styles.css
@@ -321,12 +321,12 @@ body.page-visible {
 
 .intro {
   position: absolute;
-  top: 18px;
+  top: 10px;
   left: 68px;
   width: 1137px;
   margin: 0;
   text-align: center;
-  font-size: 30px;
+  font-size: 33px;
   font-weight: 600;
   line-height: 1.21;
   color: #481750;
